[package]
name = "pg-pretty-formatter"
version = "0.0.1"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Postgres SQL formatter used in pg-pretty"
repository = "https://github.com/houseabsolute/pg-pretty"
readme = "README.md"
license = "GPL-3.0"
edition = "2018"

[dependencies]
pg-pretty-parser = { version = "0.0.1", path = "../parser" }
scopeguard = "~1"
strum_macros = "~0.20"
thiserror = "~1"
#trace = "~0.1"

[dev-dependencies]
anyhow = "~1"
k9 = "~0.11"
lazy_static = "~1"
prettydiff = "~0.3"
regex = "~1"
